--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,11 +3,13 @@ version: '3.3'
 services:
   serviceSender:
     build:
-      dockerfile:
+      dockerfile: dockerfile-Sender
     ports:
 
 
   serviceReceiver:
     build:
-      dockerfile:
+      dockerfile: dockerfile-Receiver
     ports:
+
+      # put on same network if necessary
